Refactor embedded api
