# modules/api/src/commonMain/kotlin/api/OllamaApi.kt
@@ -1,7 +1,5 @@
 package org.nirmato.ollama.api
 
-public interface OllamaApi :
-    CompletionsApi,
-    ModelsApi,
-    ChatApi,
-    EmbeddingsApi
+public interface OllamaApi : CompletionsApi, ModelsApi, ChatApi, EmbeddingsApi {
+    public suspend fun getVersion(): VersionResponse
+}
